// Use DBML to define your database structure
// Docs: https://dbml.dbdiagram.io/docs
Table services {
  id bigserial [primary key]
  name varchar(64) [not null, unique]
  callback_url varchar(255) [default: null]
  created_at timestamptz [not null, default: `now()`]
}

Table domains {
  id bigserial [primary key]
  value varchar(255) [not null, unique]
  created_at timestamptz [not null, default: `now()`]
}

Table links {
  id bigserial [primary key]
  service_id bigint [not null]
  domain_id bigint [not null]
  code varchar(8) [default: null]
  title varchar(64) [default: null]
  forward_query boolean [not null, default: false]
  callback_data jsonb [default: null]
  valid_since timestamptz [default: null]
  valid_until timestamptz [default: null]
  max_clicks int [default: null]
  created_at timestamptz [not null, default: `now()`]
  deleted_at timestamptz [default: null]

  Indexes {
    (domain_id, code) [unique]
  }

  // CHECK (code ~ '^[A-Za-z0-9_-]{1,8}$')
}

Ref: services.id < links.service_id [delete: restrict]
Ref: domains.id < links.domain_id [delete: restrict]

Table urls {
  id bigserial [primary key]
  value varchar(2048) [not null, unique]
  created_at timestamptz [not null, default: `now()`]
}

Table conditions {
  id bigserial [primary key]
  type varchar(32) [not null]
  data jsonb [not null]
  created_at timestamptz [not null, default: `now()`]
}

Table rules {
  id bigserial [primary key]
  link_id bigint [not null]
  url_id bigint [not null]
  priority integer [not null, default: 0]
  created_at timestamptz [not null, default: `now()`]

  Indexes {
    (link_id, priority) [unique]
  }
}

Ref: links.id < rules.link_id [delete: CASCADE]
Ref: urls.id < rules.url_id [delete: restrict]

// Multi-condition rules (RUL-01): a rule matches when ALL its conditions match.
Table condition_rule {
  rule_id bigint [not null]
  condition_id bigint [not null]

  Indexes {
    (rule_id, condition_id) [unique]
    condition_id // restrict-check on a conditions delete
  }
}

Ref: rules.id < condition_rule.rule_id [delete: CASCADE]
Ref: conditions.id < condition_rule.condition_id [delete: restrict]

// A/B split (GAP-04): a rule fans its winning traffic across weighted targets.
Table rule_variants {
  id bigserial [primary key]
  rule_id bigint [not null]
  url_id bigint [not null]
  weight smallint [not null]
  label varchar(64) [default: null]

  Indexes {
    rule_id
  }
}

Ref: rules.id < rule_variants.rule_id [delete: CASCADE]
Ref: urls.id < rule_variants.url_id [delete: restrict]

Table referrers {
  id bigserial [primary key]
  value varchar(2048) [not null, unique]
  created_at timestamptz [not null, default: `now()`]
}

Table user_agents {
  id bigserial [primary key]
  value text [not null, unique]
  is_bot boolean [not null, default: false]
  created_at timestamptz [not null, default: `now()`]
}

Table link_click_counters {
  id bigserial [primary key]
  link_id bigint [not null]
  is_bot boolean [not null]
  slot smallint [not null]
  count bigint [not null, default: 0]

  indexes {
    (link_id, is_bot, slot) [unique]
  }
}

Ref: links.id < link_click_counters.link_id [delete: restrict]

Table ip_addresses {
  id bigserial [primary key]
  value inet [not null, unique]
  created_at timestamptz [not null, default: `now()`]
}

// Click geolocation dictionary (stage 4). region/city are '' (never NULL) when
// unknown so the UNIQUE tuple dedupes — Postgres treats NULLs as distinct.
Table geo_locations {
  id bigserial [primary key]
  country_code char(2) [not null] // ISO 3166-1 alpha-2
  region varchar(128) [not null, default: '']
  city varchar(128) [not null, default: '']
  created_at timestamptz [not null, default: `now()`]

  Indexes {
    (country_code, region, city) [unique]
  }
}

Table clicks {
  id bigserial [primary key]
  service_id bigint [not null]
  link_id bigint [not null]
  url_id bigint [not null]
  referrer_id bigint
  user_agent_id bigint
  ip_address_id bigint
  rule_variant_id bigint
  geo_location_id bigint
  visited_query text [default: null]
  created_at timestamptz [not null, default: `now()`]

  Indexes {
    user_agent_id // admin bot filter + user_agents restrict-check
    ip_address_id // RI probe per ip_addresses delete in ips:prune
    rule_variant_id // per-variant analytics + SET NULL sweep on rule rewrite
    // + partial: (geo_location_id) WHERE geo_location_id IS NOT NULL —
    //   per-country analytics + geo_locations restrict-check
    //   (clicks_geo_location_id_index)
    // + partial: (created_at) WHERE ip_address_id IS NOT NULL — detach phase
    //   of ips:prune (clicks_pending_ip_created_at_index)
  }
}

Ref: services.id < clicks.service_id [delete: restrict]
Ref: links.id < clicks.link_id [delete: restrict]
Ref: urls.id < clicks.url_id [delete: restrict]
Ref: referrers.id < clicks.referrer_id [delete: restrict]
Ref: user_agents.id < clicks.user_agent_id [delete: restrict]
Ref: ip_addresses.id < clicks.ip_address_id [delete: restrict]
Ref: rule_variants.id < clicks.rule_variant_id [delete: set null]
Ref: geo_locations.id < clicks.geo_location_id [delete: restrict]

Enum callback_status {
  pending
  queued
  processing
  success
  failed
  discarded
}

Table callbacks {
  id bigserial [primary key]
  service_id bigint [not null]
  click_id bigint [not null]
  data jsonb [not null]
  response_code int
  response_body text
  status callback_status [not null, default: 'pending']
  attempts int [not null, default: 0]
  last_attempt_at timestamptz
  created_at timestamptz [not null, default: `now()`]

  Indexes {
    (status)
  }
}

Ref: services.id < callbacks.service_id [delete: cascade]
Ref: clicks.id < callbacks.click_id [delete: cascade]
